# HaloArchaea-Metagenomics

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: config.yaml  resources.yaml  samples.tsv
docs/: database_setup.md  installation.md  interpreting_results.md  pipeline_details.md
workflow/: Snakefile
workflow/envs/: assembly.yaml  binning.yaml  biopython.yaml  qc.yaml
workflow/rules/: 01_qc.smk  02_assembly.smk  03_binning.smk  04_quality.smk  05_taxonomy.smk  06_annotation.smk  07_halo_analysis.smk
workflow/scripts/: calculate_PI.py  calculate_pI.py
